<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/photo">

    <androidx.cardview.widget.CardView
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="250dp"
        app:cardCornerRadius="16dp">

        <LinearLayout
            android:layout_width="500dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/food_logo"
                    android:layout_marginRight="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textSize="40dp"
                    android:layout_gravity="center"/>


            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/personalInformationLogin"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="40dp"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:id="@+id/loginEditText"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textField1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/personalInformationPassword"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="20dp"
                app:endIconMode="password_toggle"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:inputType="textPassword"
                    android:id="@+id/passwordEditText"
                    />

            </com.google.android.material.textfield.TextInputLayout>


            <Button
                style="@style/Widget.Material3.Button.ElevatedButton"
                android:id="@+id/loginButton"
                android:layout_width="400dp"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:textColor="@color/white"
                android:backgroundTint="@color/orange"
                android:textSize="20dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/haveAccount"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:textSize="17dp"/>

            <Button
                style="@style/Widget.courseProject.TextButton.Authorization"
                android:id="@+id/singUpButton"
                android:text="@string/signup"
                android:onClick="toSignUpButton"
                android:textAllCaps="false"
                android:textSize="20dp"
                android:layout_marginBottom="10dp"
                />

        </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>