<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    app:cardCornerRadius="20dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cart"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:textColor="@color/black"/>


            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rv_cart"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="right"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="Общая стоимость:"
                    android:gravity="right"
                    android:textSize="20dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/totalPriceCart"
                    android:layout_weight="1"
                    android:text="total"
                    android:layout_marginRight="2dp"
                    android:layout_marginLeft="20dp"
                    android:textColor="@color/black"
                    android:textSize="22dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="₽"
                    android:layout_marginRight="20dp"
                    android:textColor="@color/black"
                    android:textSize="22dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:layout_gravity="right"
                android:layout_marginBottom="20dp">


                <Button
                    style="@style/Widget.Material3.Button.ElevatedButton"
                    android:id="@+id/createOrderButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/createOrder"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/orange"
                    android:textSize="20dp"
                    android:layout_marginRight="10dp"
                    />

                <Button
                    style="@style/Widget.Material3.Button.ElevatedButton"
                    android:id="@+id/payButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pay"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/orange"
                    android:textSize="20dp"
                    android:layout_marginRight="20dp"

                    />

            </LinearLayout>
        </LinearLayout>


    </ScrollView>

</androidx.cardview.widget.CardView>

